# gripboard

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: gripboard.desktop  gripboard.service
data/rules/: 02-obfuscation.toml
gripboard/: __init__.py  __main__.py  audit.py  cli.py  config.py  dialog.py  monitor.py  notifier.py  profiles.py  rules.py  sanitizer.py  scanner.py  scoring.py  shellparser.py  sync.py  tray.py
gripboard/builtin_rules/: 00-shell-dangerous.toml  01-network-suspicious.toml
gripboard/server/: __init__.py  app.py
tests/: test_audit.py  test_profiles.py  test_rules.py  test_sanitizer.py  test_scanner.py  test_scoring.py  test_shellparser.py
